--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,6 +94,18 @@ jobs:
           fi
 
 
+      - name: Generate Unique Solution Prefix
+        id: generate_solution_prefix
+        run: |
+          set -e
+          COMMON_PART="psldg"
+          TIMESTAMP=$(date +%s)  
+          UPDATED_TIMESTAMP=$(echo $TIMESTAMP | tail -c 6) 
+          UNIQUE_SOLUTION_PREFIX="${COMMON_PART}${UPDATED_TIMESTAMP}"
+          echo "SOLUTION_PREFIX=${UNIQUE_SOLUTION_PREFIX}" >> $GITHUB_ENV
+          echo "Generated SOLUTION_PREFIX: ${UNIQUE_SOLUTION_PREFIX}"
+
+
       - name: Deploy Bicep Template
         id: deploy
         run: |
@@ -102,7 +114,8 @@ jobs:
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
             --parameters infra/main.bicepparam \
-            --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
+            --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }} \
+            --parameters solutionPrefix=${{ env.SOLUTION_PREFIX }} \
 
 
       - name: Send Notification on Failure
