--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -6,6 +6,7 @@ on:
       - main
   schedule:
     - cron: '0 11,23 * * *'  # Runs at 11:00 AM and 11:00 PM GMT
+  workflow_dispatch:
 
 jobs:
   deploy:
