--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -99,7 +99,7 @@ jobs:
         id: generate_solution_prefix
         run: |
           set -e
-          COMMON_PART="psldg"
+          COMMON_PART="macae"
           TIMESTAMP=$(date +%s)  
           UPDATED_TIMESTAMP=$(echo $TIMESTAMP | tail -c 6) 
           UNIQUE_SOLUTION_PREFIX="${COMMON_PART}${UPDATED_TIMESTAMP}"
@@ -114,9 +114,10 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
-            --parameters infra/main.waf-aligned.bicepparam \
             --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
             --parameters solutionPrefix=${{ env.SOLUTION_PREFIX }} \
+            --parameters virtualMachineConfiguration='{"adminUsername":"adminuser","adminPassword":"P@ssw0rd1234"}' \
+            --parameters logAnalyticsWorkspaceConfiguration='{"existingWorkspaceResourceId":""}'
 
 
       - name: Send Notification on Failure
