--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -114,10 +114,9 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
+            --parameters @infra/main.waf-aligned.bicepparam
             --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
             --parameters solutionPrefix=${{ env.SOLUTION_PREFIX }} \
-            --parameters virtualMachineConfiguration='{"adminUsername":"adminuser","adminPassword":"P@ssw0rd1234"}' \
-            --parameters logAnalyticsWorkspaceConfiguration='{"existingWorkspaceResourceId":""}'
 
 
       - name: Send Notification on Failure
