--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,12 +113,9 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
+            --parameters @infra/main.bicepparam
             --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
             --parameters solutionPrefix=${{ env.SOLUTION_PREFIX }} \
-            --parameters logAnalyticsWorkspaceConfiguration='{"dataRetentionInDays":30,"existingWorkspaceResourceId":""}' \
-            --parameters applicationInsightsConfiguration='{"retentionInDays":30}' \
-            --parameters virtualNetworkConfiguration='{"enabled":false}' \
-            --parameters webServerFarmConfiguration='{"skuCapacity":1,"skuName":"B2"}'
 
 
       - name: Send Notification on Failure
