Add step to build Bicep parameters file and update deployment command to use generated JSON

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,6 +105,12 @@ jobs:
           echo "SOLUTION_PREFIX=${UNIQUE_SOLUTION_PREFIX}" >> $GITHUB_ENV
           echo "Generated SOLUTION_PREFIX: ${UNIQUE_SOLUTION_PREFIX}"
           
+
+      - name: Build .bicepparam to JSON
+        run: |
+          az bicep install
+          bicep build infra/main.bicepparam --outfile infra/temp.parameters.json
+
           
       - name: Deploy Bicep Template
         id: deploy
@@ -113,12 +119,9 @@ jobs:
           az deployment group create \
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
+            --parameters @infra/temp.parameters.json \
             --parameters azureOpenAILocation=${{ env.AZURE_LOCATION }}
             --parameters solutionPrefix=${{ env.SOLUTION_PREFIX }} \
-            --parameters logAnalyticsWorkspaceConfiguration="{\"dataRetentionInDays\":30,\"existingWorkspaceResourceId\":\"\"}" \
-            --parameters applicationInsightsConfiguration="{\"retentionInDays\":30}" \
-            --parameters virtualNetworkConfiguration="{\"enabled\":false}" \
-            --parameters webServerFarmConfiguration="{\"skuCapacity\":1,\"skuName\":\"B2\"}"
 
 
       - name: Send Notification on Failure
