Refactor Bicep deployment parameters to use JSON format for Log Analytics, Application Insights, VNet, and Web Server Farm configurations.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,12 +116,10 @@ jobs:
             --parameters \
               solutionPrefix='${{ env.SOLUTION_PREFIX }}' \
               azureOpenAILocation='${{ env.AZURE_LOCATION }}' \
-              logAnalyticsWorkspaceConfiguration.dataRetentionInDays=30 \
-              logAnalyticsWorkspaceConfiguration.existingWorkspaceResourceId='' \
-              applicationInsightsConfiguration.retentionInDays=30 \
-              virtualNetworkConfiguration.enabled=false \
-              webServerFarmConfiguration.skuCapacity=1 \
-              webServerFarmConfiguration.skuName='B2'
+              logAnalyticsWorkspaceConfiguration='{"dataRetentionInDays": 30, "existingWorkspaceResourceId": ""}' \
+              applicationInsightsConfiguration='{"retentionInDays": 30}' \
+              virtualNetworkConfiguration='{"enabled": false}' \
+              webServerFarmConfiguration='{"skuCapacity": 1, "skuName": "B2"}'
 
 
       - name: Send Notification on Failure
